@@ -1,3 +1,6 @@
+- Applied Chris Ortman's patch fixing NVELOCITY-ISSUE-11
+  "NVelocity swallows Ambiguous matches"
+
 - Applied Ashish Kulkarni's patch fixing NVELOCITY-ISSUE-28
   "handle divide-by-zero exception when performing arithmetic operations"
 - Added ArithmeticExpressionTestCase.
